# chantricks

./: .gitignore  Makefile  README.md  chantricks.pc.in  chantricks.tcl  meson.build
doc/: chantricks.md
tests/: all.tcl  readbin.test  readfile.test  tapchan.test  with_chan.test  with_file.test
